k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgr-prod
  labels:
    name: sgr-prod
